<resources>
    <string name="app_name">Matrimony</string>
    <string-array name="stepLabels">
        <item>Profile For</item>
        <item>Personal</item>
        <item>Career</item>
        <item>Social</item>
        <item>Login</item>
    </string-array>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="error_connecting">Error Connecting</string>
    <string name="please_wait">Please wait...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="reg_hint_district">District *</string>
    <string name="reg_hint_dob">Date of birth *</string>
    <string name="reg_hint_height">Height *</string>
    <string name="reg_indicates_personel">*All fields mandatory</string>
    <string name="reg_hint_state">State *</string>
    <string name="city">City *</string>
    <string name="higest_education">Higest Education *</string>
    <string name="reg_hint_pin">Pin Code *</string>
    <string name="education">Education</string>
    <string name="work_area">Work Place *</string>
    <string name="work_experiecnce">Work Experience</string>
    <string name="other">Other</string>
    <string name="income">Annual Income *</string>
    <string name="blood">Blood Group *</string>
    <string name="adhar">Aadhaar Number. *</string>
    <string name="marital">Marital Status *</string>
    <string name="gotra">Gotra Family*</string>
    <string name="gotra_nanihal">Gotra Nanihal*</string>
    <string name="caste">Caste*</string>
    <string name="manglik">Manglik *</string>
    <string name="birth_time">Birth Time *</string>
    <string name="birth_place">Birth Place *</string>
    <string name="martial_details">Marital Details</string>
    <string name="birth_details">Birth Details</string>
    <string name="full_name">Full Name *</string>
    <string name="email">Email ID *</string>
    <string name="password">Password *</string>
    <string name="phone">Mobile no. *</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="first_intro">Perfect Match</string>
    <string name="second_intro">No Fake Profiles</string>
    <string name="third_intro">Ready to meet your</string>
    <string name="first_intro_msg">Meet your perfect partner right here</string>
    <string name="second_intro_msg">All profiles are verified by Matrimony team</string>
    <string name="third_intro_msg">Dream Partner?</string>
    <string name="title_dialog">Matrimony</string>
    <string name="msg_dialog">Are you sure want to close Matrimony?</string>
    <string name="yes_dialog">Yes!</string>
    <string name="no_dialog">No</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_shortlisted">Shortlisted</string>
    <string name="nav_visitor">Profile Visitors</string>
    <string name="nav_interest">Interest</string>
    <string name="nav_events">News</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_chat">Chats</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share_app">Share App</string>
    <string name="val_pass_c">Please enter password between 6-13 Digit.</string>
    <string name="val_new_pas">Please Enter New Password</string>
    <string name="val_c_pas">Please Enter Confirm Password</string>
    <string name="val_n_c_pas">password  does not match!</string>
    <string name="internet_connection">Please enable your internet connection.</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">You can add only 5 images</string>
    <string name="action_done">Done</string>
    <string name="action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="photos_unit">Photos : %d</string>
    <string name="photo_unit">Photo : %d</string>
    <string name="no_photo_unit">No photo</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="error_image_not_exist">Image error</string>
    <string name="error_no_permission">Has no permission</string>
    <string name="permission_dialog_title">Permission Deny</string>
    <string name="permission_dialog_ok">OK</string>
    <string name="permission_dialog_cancel">CANCEL</string>
    <string name="permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_rationale_write_storage">Storage write permission is needed to save the image.</string>
    <string name="profile_for">Please select profile for.</string>
    <string name="val_gender">Please select gender.</string>
    <string name="val_dob">Please select dob.</string>
    <string name="val_height">Please select height.</string>
    <string name="val_state">Please select state.</string>
    <string name="val_district">Please select district.</string>
    <string name="val_city">Please enter city.</string>
    <string name="val_pin">Please enter pincode.</string>
    <string name="val_education">Please enter education.</string>
    <string name="val_work_area">Please enter work area.</string>
    <string name="val_occupations">Please select occupations.</string>
    <string name="val_organization">Please enter organization name.</string>
    <string name="val_income">Please select annual income.</string>
    <string name="val_blood">Please select blood group.</string>
    <string name="val_aadhar">Please enter correct aadhaar number.</string>
    <string name="val_maritial_status">Please select marital status.</string>
    <string name="val_gotra">Please enter gotra.</string>
    <string name="val_manglik">Please select Manglik.</string>
    <string name="val_caste">Please select Caste.</string>
    <string name="select_manglik">Select Manglik.</string>
    <string name="val_birth_time">Please select birth time.</string>
    <string name="val_birth_place">Please enter birth place.</string>
    <string name="val_gotra_nanihal">Please enter gotra nanihal.</string>
    <string name="val_full_name">Please enter your full name</string>
    <string name="val_email">Please enter correct email ID</string>
    <string name="val_password">Please enter minimum 6 digit password.</string>
    <string name="val_mobile">Please enter correct mobile number.</string>
    <string name="val_mobile_whats">Please enter correct whatsapp number.</string>
    <string name="head_res_one">Profile For</string>
    <string name="head_res_two">Personal Details</string>
    <string name="head_res_three">Important Details</string>
    <string name="head_res_four">Social Details</string>
    <string name="head_res_five">Login Details</string>
    <string name="exit_res">Opps Think you just do not want to create your profile now?</string>
    <string name="msg_res_exit">Do it later!</string>
    <string name="select_occupation">Select Occupation</string>
    <string name="mother_occupation">Select Mother Occupation</string>
    <string name="father_occupation">Select Father Occupation</string>
    <string name="select_income">Select Income</string>
    <string name="select_family_status">Select Family Status</string>
    <string name="select_family_type">Select Family Type</string>
    <string name="select_family_value">Select Family Value</string>
    <string name="brothers">Brother(s)</string>
    <string name="sisters">Sister(s)</string>
    <string name="select_state">Select State</string>
    <string name="select_caste">Select Caste</string>
    <string name="close">Close</string>
    <string name="select_district">Select District</string>
    <string name="val_grandf">Please enter grandfather name</string>
    <string name="val_mgrandf">Please enter maternal grandfather name</string>
    <string name="val_father_name">Please enter father name</string>
    <string name="val_mother_name">Please enter mother name</string>
    <string name="val_address">Please enter address</string>
    <string name="val_about_fam">Please enter about family</string>
    <string name="val_father_occupation">Please select father occupation</string>
    <string name="val_mother_occupation">Please select mother occupation</string>
    <string name="select_brother">Please select brother</string>
    <string name="select_sister">Please select sister</string>
    <string name="val_select_family_income">Please select family Income</string>
    <string name="val_family_status">Please select family status</string>
    <string name="val_family_type">Please select family type</string>
    <string name="val_family_value">Please select family value</string>
    <string name="val_challanged">Please select Physical challenged</string>
    <string name="val_complexion">Please select complexion</string>
    <string name="val_body_type">Please select body type</string>
    <string name="val_weight">Please enter weight</string>
    <string name="val_about_me">Please enter about me</string>
    <string name="select_challenged">Select Physiscal Challenged</string>
    <string name="select_bodytype">Select Body Type</string>
    <string name="select_blood">Select BloodGroup</string>
    <string name="select_complexion">Select Complexion</string>
    <string name="select_height">Select Height</string>
    <string name="select_dob">Select Date of Birth.</string>
    <string name="select_maritial_status">Select Marital Status</string>
    <string name="select_dietary">Select Dietary</string>
    <string name="select_drink">Select Drink</string>
    <string name="select_smoking">Select Smoking</string>
    <string name="select_hobbies">Select Hobbies</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="update">UPDATE</string>
    <string name="bio_name_girl">Girl Name :</string>
    <string name="bio_maritial_status">Marital Status :</string>
    <string name="bio_blood_group">Blood Group :</string>
    <string name="bio_birth_date">Birth Date :</string>
    <string name="bio_birth_time">Birth Time :</string>
    <string name="bio_birth_place">Birth Place :</string>
    <string name="bio_manglik">Manglik :</string>
    <string name="bio_gotra">Gotra (Family) :</string>
    <string name="bio_gotra_ninihal">Gotra (Nanihal) :</string>
    <string name="bio_color">Complexion :</string>
    <string name="bio_height">Height :</string>
    <string name="bio_education">Education :</string>
    <string name="bio_occu_girl">Girl Occupation :</string>
    <string name="bio_income">Annual Income :</string>
    <string name="bio_work_place">Work Place :</string>
    <string name="bio_dada_ji">Grandfaher :</string>
    <string name="bio_father_name">Father :</string>
    <string name="bio_mother_name">Mother :</string>
    <string name="bio_bro_sis">Brother-Sister :</string>
    <string name="bio_nana_ji">Maternal Grandfather :</string>
    <string name="bio_father_occu">Father Occupation :</string>
    <string name="bio_address">Address :</string>
    <string name="bio_pincode">Pincode :</string>
    <string name="bio_email">Email :</string>
    <string name="bio_whatsup_no">Whatsapp Number :</string>
    <string name="bio_father_no">Parent Contact :</string>
    <string name="note">Note : For any information, contact the given email, Whatsapp and mobile number.</string>
    <string name="bio_data">Bio Data</string>
    <string name="bio_header">Shri Ganeshya Namah</string>
</resources>