<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_shortlisted"
            android:title="@string/nav_shortlisted" />

        <item
            android:id="@+id/nav_visitor"
            android:title="@string/nav_visitor" />
        <item
            android:id="@+id/nav_interest"
            android:title="@string/nav_interest" />
        <item
            android:id="@+id/nav_events"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_chat"
            android:title="@string/nav_chat" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />


    </group>


</menu>
