<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/action_bar_menus"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/backgroundbg"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow"
                android:textColor="@color/white" />

        </LinearLayout>

        <com.samyotech.matrimony.view.CustomTextViewBold
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.samyotech.matrimony.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password" />

        <com.samyotech.matrimony.view.CustomEditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword" />


        <com.samyotech.matrimony.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/new_password" />

        <com.samyotech.matrimony.view.CustomEditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword" />


        <com.samyotech.matrimony.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/confirm_password" />

        <com.samyotech.matrimony.view.CustomEditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textPassword" />


        <com.samyotech.matrimony.view.CustomButton
            android:id="@+id/UpdateBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_selector_app"
            android:text="@string/update"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
